--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "load":"node ./helper/loadJSON.js"
+    "load": "node ./helper/loadJSON.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "ejs": "^2.7.1"
+    "ejs": "^2.7.1",
+    "pug": "^2.0.4"
   }
 }
